--- a/password/email.html
+++ b/password/email.html
@@ -30,9 +30,8 @@
             </div>
             <table class="confirm-body-input">
                 <tr>
-                    <!-- TODO: 無効なlabel動作を確認すること @shin -->
                     <td><label for="c-mail">電子郵件信箱</label></td>
-                    <td><input type="email" name="c-mail"></td>
+                    <td><input type="email" name="c_mail" id="c-mail"></td>
                 </tr>
                 <tr>
                     <td><label for="password">密碼</label></td>
