--- a/mypage/editinfo.html
+++ b/mypage/editinfo.html
@@ -10,7 +10,7 @@
     <title>A++ my info</title>
     <link rel="stylesheet" href="../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
 </head>
 
 <body id="pagetop">
