--- a/mypage/editskill.html
+++ b/mypage/editskill.html
@@ -8,7 +8,7 @@
     <title>A++ my skills</title>
     <link rel="stylesheet" href="../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
 </head>
 
 <body class="lower-index" id="pagetop">
