--- a/password/confirm.html
+++ b/password/confirm.html
@@ -8,7 +8,7 @@
     <title>A++ User Email Confirmation</title>
     <link rel="stylesheet" href="../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
 </head>
 
 <body>
