--- a/reg/step1.html
+++ b/reg/step1.html
@@ -8,7 +8,7 @@
     <title>A++ 註冊會員 STEP1 註冊成為會員</title>
     <link rel="stylesheet" href="../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
 </head>
 
 <body id="pagetop">
