--- a/reg/step2.html
+++ b/reg/step2.html
@@ -8,7 +8,7 @@
     <title>A++ 註冊會員 STEP2 填寫個人履歷</title>
     <link rel="stylesheet" href="../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
 </head>
 
 <body id="pagetop">
