--- a/reg/step3.html
+++ b/reg/step3.html
@@ -8,7 +8,7 @@
     <title>A++ 註冊會員 STEP3 填寫自我評量</title>
     <link rel="stylesheet" href="../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
 </head>
 
 <body class="lower-index" id="pagetop">
