--- a/reg/step4.html
+++ b/reg/step4.html
@@ -8,7 +8,7 @@
     <title>A++ 註冊會員 STEP4 完成</title>
     <link rel="stylesheet" href="../css/style.css" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
 </head>
 
 <body>
