--- a/reg/step2.html
+++ b/reg/step2.html
@@ -55,7 +55,8 @@
                     <div class="personal-info-contents">
                         <div class="personal-info-contents__image">
                             <div class="image-area">
-                                <img src="" class="preview" id="preview" alt="+">
+                                <img src="../img/cameraa_add_image_gray.svg" alt="camera-icon" class="camera-icon">
+                                <img src="" class="preview" id="preview" alt="">
                                 <input type="file" name="profile_img" required accept="image/*"
                                     onchange="previewImage(this)">
                             </div>
@@ -181,6 +182,7 @@
 
     <!-- Scripts -->
     <script src="../js/script.js"></script>
+    <script src="../js/register.js"></script>
 </body>
 
 </html>
